--- a/css/index.css
+++ b/css/index.css
@@ -87,7 +87,6 @@ span{
 .HomeLogo{
     margin-left: 103px;
     margin-right: 90px;
-    margin-top: 9px;
     margin-bottom: 0px;
     padding-bottom: 0px;
     width: 290px;
@@ -325,15 +324,17 @@ span{
 
 .HomeHeader{
     background-image: url('../images/home_banner.png');
-    height: 800px;
+    height: 675px;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 .HomeHeaderTitle{
     font-size: 60px;
+    line-height: 1.3;
     padding-top: 10%;
     margin-left: 100px;
+    font-family: roboto-condensed;
     font-weight: 900;
     text-shadow: 2px 2px 8px #333333;
 }
@@ -341,16 +342,16 @@ span{
 .HomeHeaderShape{
     margin-left: 100px;
     padding-top: 5px;
-    background-color: red;
+    background-color: #C81E28;
     opacity: 1;
     width: 10%;
 }
 
 .HomeHeaderText2{
     margin-left: 100px;
-    font-size: 30px;
+    font-family: roboto-condensed;
+    font-size: 28px;
     font-weight: 500;
-    padding-top: 40px;
     text-shadow: 2px 2px 6px #333;
 }
 
@@ -376,7 +377,7 @@ span{
     margin-bottom: 0px;
     padding-bottom: 50px;
     font-size: 20px;
-    font-family: roboto-regular;
+    font-family: roboto-light;
     font-weight: 100;
 }
 
